# oop_lab

./: CMakeLists.txt  main.cpp
headers/: Calculator.h  DTOs.h  Date.h  History.h  Map.h  Parameters.h  Parcel.h
src/classes/: Calculator.cpp  Date.cpp  History.cpp  Map.cpp  Parameters.cpp  Parcel.cpp  classes.cpp  classes.h
src/db/: DB.db  map_db.txt  parcels_history_db.txt
src/dbHandlers/: db_handlers.cpp  db_handlers.h
